apagar coeval con periodo auto

--- a/src/Admin/UnadBundle/Resources/views/Docente/show.html.twig
+++ b/src/Admin/UnadBundle/Resources/views/Docente/show.html.twig
@@ -129,7 +129,7 @@
                 </th>
                 <td>Evaluación del director a los tutores de curso</td>
                 <td>
-                    {% if instrumentos[3].estado %}
+                    {% if periodo.auto %}
                         <a href="{{ path('docente_coevaltutor') }}" class="btn btn-primary btn-xs">Ingresar <i
                                     class="fa fa-sign-in"></i></a>
                     {% endif %}
