update periodo en lista DC planes G

--- a/src/Admin/MedBundle/Resources/views/Avalplang/porescuela.html.twig
+++ b/src/Admin/MedBundle/Resources/views/Avalplang/porescuela.html.twig
@@ -2,7 +2,7 @@
 
 {% block body -%}
     {% if escuela %}
-        <h1>Planes de Gestión de Docentes de Carrera {{ escuela.sigla }} del periodo {{ periodo }}.</h1>
+        <h1>Planes de Gestión de Docentes de Carrera {{ escuela.sigla }} del periodo {{ periodo.observaciones }}.</h1>
     {% endif %}
     <table class="table table-bordered table-striped hidden-mobile" style="width: 95%">
         <thead>
