--- a/src/Admin/MedBundle/Resources/views/Plangestion/conf.html.twig
+++ b/src/Admin/MedBundle/Resources/views/Plangestion/conf.html.twig
@@ -69,7 +69,7 @@
                                 class="btn-label"><i class="glyphicon glyphicon-thumbs-up"></i></span>Confirmar
                         Asignación</a>
                 {% else %}
-                    <a href="{{ path('plangestion_show', { 'id': entity.docente.id }) }}"
+                    <a href="{{ path('plangestion_show') }}"
                        class="btn btn-primary btn-xs">Autoevaluación<i class="fa fa-sign-in"></i></a>
                 {% endif %}
             </td>
