--- a/app/Resources/views/Docente/inicio-dc.html.twig
+++ b/app/Resources/views/Docente/inicio-dc.html.twig
@@ -1,7 +1,7 @@
 {% extends '::base.html.twig' %}
 {% block body -%}
     {{ include(
-        'AdminUnadBundle:Docente:detalle.html.twig',
+        'Docente:detalle.html.twig',
         {'entity': entity, 'periodo': periodo }
     ) }}
     {% if is_granted('ROLE_ADMIN') %}
