--- a/app/Resources/views/Curso/show.html.twig
+++ b/app/Resources/views/Curso/show.html.twig
@@ -6,22 +6,22 @@
             {'entity': entity}, {'cursooferta':cursooferta}
         ) }}
 
-Agregar Oferta al curso: {{entity.id}}
+    <h4>Agregar oferta al curso: {{entity.id}}</h4>
 <table class="table table-bordered table-striped hidden-mobile" style="width: 50%">
 <form action="{{ path('oferta_curso', { 'id': entity.id }) }}" method="POST" {{ form_start(form) }}
     <tr>
         <td>
              {{ form_label(form.cedula,  'Cédula del Director') }}
-    {{ form_widget(form.cedula) }}    
+    {{ form_widget(form.cedula) }}
     {{ form_errors(form.cedula) }}
         </td>
         <td>
              {{ form_label(form.periodo,  'Periodo') }}
-    {{ form_widget(form.periodo) }}    
-    {{ form_errors(form.periodo) }}   
+    {{ form_widget(form.periodo) }}
+    {{ form_errors(form.periodo) }}
         </td>
         <td>
-           <input type="submit" label="Agregar" />     
+           <input type="submit" label="Agregar" />
         </td>
     </tr>
 </form>
