--- a/app/Resources/views/Escuela/info.html.twig
+++ b/app/Resources/views/Escuela/info.html.twig
@@ -53,7 +53,7 @@
                 </td>
             </tr>
              <th>Cursos</th>
-                <td><a  href="{{ path('curso_escuela', { 'sigla': entity.sigla }) }}">Ver</a> </td>
+                <td><a  href="{{ path('curso_escuela', { 'id': entity.id }) }}">Ver</a> </td>
             </tr>
         </tbody>
     </table>
