update coeval director sin definir

--- a/src/Admin/MedBundle/Resources/views/redTutores/edit.html.twig
+++ b/src/Admin/MedBundle/Resources/views/redTutores/edit.html.twig
@@ -14,7 +14,7 @@
                 <th>Evaluación</th>
             </tr>
         </thead>
-        <tbody>                                 
+        <tbody>
             <tr>
     <td rowspan="2"><b>1</b></td>
     <td><b>Currículo</b></td>
@@ -23,8 +23,8 @@
   </tr>
   <tr>
     <td colspan="2"><i>Variable: Pedagógico-Didáctico -  Dimensión: Mediaciones (Contenidos)</i></td>
-  </tr>      
-                                  
+  </tr>
+
             <tr>
     <td rowspan="2"><b>2</b></td>
     <td><b>Aseguramiento de la calidad de los materiales didácticos </b></td>
@@ -33,8 +33,8 @@
   </tr>
   <tr>
     <td colspan="2"><i>Variable: Pedagógico-Didáctico -  Dimensión: Mediaciones (Contenidos)</i></td>
-  </tr>      
-                                  
+  </tr>
+
             <tr>
     <td rowspan="2"><b>3</b></td>
     <td><b>Planificación del Curso</b></td>
@@ -43,8 +43,8 @@
   </tr>
   <tr>
     <td colspan="2"><i>Variable: Pedagógico-Didáctico -  Dimensión: Mediaciones (Contenidos)</i></td>
-  </tr>      
-                                  
+  </tr>
+
             <tr>
     <td rowspan="2"><b>4</b></td>
     <td><b>Redacción y Lenguaje</b></td>
@@ -53,8 +53,8 @@
   </tr>
   <tr>
     <td colspan="2"><i>Variable: Pedagógico-Didáctico -  Dimensión: Mediaciones (Contenidos)</i></td>
-  </tr>      
-                                  
+  </tr>
+
             <tr>
     <td rowspan="2"><b>5</b></td>
     <td><b>Derechos de Autor </b></td>
@@ -63,8 +63,8 @@
   </tr>
   <tr>
     <td colspan="2"><i>Variable: Pedagógico-Didáctico -  Dimensión: Mediaciones (Contenidos)</i></td>
-  </tr>      
-                                  
+  </tr>
+
             <tr>
     <td rowspan="2"><b>6</b></td>
     <td><b>Recursos de Aprendizaje complementarios</b></td>
@@ -73,8 +73,8 @@
   </tr>
   <tr>
     <td colspan="2"><i>Variable: Pedagógico-Didáctico -  Dimensión: Mediaciones (Contenidos)</i></td>
-  </tr>      
-                                  
+  </tr>
+
             <tr>
     <td rowspan="2"><b>7</b></td>
     <td><b>Estética</b></td>
@@ -83,8 +83,8 @@
   </tr>
   <tr>
     <td colspan="2"><i>Variable: Pedagógico-Didáctico -  Dimensión: Mediaciones (Contenidos)</i></td>
-  </tr>      
-                                  
+  </tr>
+
             <tr>
     <td rowspan="2"><b>8</b></td>
     <td><b>Coordinación  de la acción tutorial</b></td>
@@ -93,8 +93,8 @@
   </tr>
   <tr>
     <td colspan="2"><i>Variable: Pedagógico-Didáctico -  Dimensión: Mediadores</i></td>
-  </tr>      
-                                  
+  </tr>
+
             <tr>
     <td rowspan="2"><b>9</b></td>
     <td><b>Desarrollo de la acción formativa</b></td>
@@ -103,8 +103,8 @@
   </tr>
   <tr>
     <td colspan="2"><i>Variable: Pedagógico-Didáctico -  Dimensión: Mediadores</i></td>
-  </tr>      
-                                  
+  </tr>
+
             <tr>
     <td rowspan="2"><b>10</b></td>
     <td><b>Recursos Multimedia</b></td>
@@ -113,8 +113,8 @@
   </tr>
   <tr>
     <td colspan="2"><i>Variable: Pedagógico-Didáctico -  Dimensión: Medios</i></td>
-  </tr>      
-                                  
+  </tr>
+
             <tr>
     <td rowspan="2"><b>11</b></td>
     <td><b>Herramientas Colaborativas</b></td>
@@ -123,8 +123,8 @@
   </tr>
   <tr>
     <td colspan="2"><i>Variable: Pedagógico-Didáctico -  Dimensión: Medios</i></td>
-  </tr>      
-                                  
+  </tr>
+
             <tr>
     <td rowspan="2"><b>12</b></td>
     <td><b>Navegabilidad</b></td>
@@ -133,8 +133,8 @@
   </tr>
   <tr>
     <td colspan="2"><i>Variable: Pedagógico-Didáctico -  Dimensión: Medios</i></td>
-  </tr>      
-                                  
+  </tr>
+
             <tr>
     <td rowspan="2"><b>13</b></td>
     <td><b>Interactividad</b></td>
@@ -143,8 +143,8 @@
   </tr>
   <tr>
     <td colspan="2"><i>Variable: Pedagógico-Didáctico -  Dimensión: Medios</i></td>
-  </tr>      
-                                  
+  </tr>
+
             <tr>
     <td rowspan="2"><b>14</b></td>
     <td><b>Estilos Cognitivos</b></td>
@@ -153,8 +153,8 @@
   </tr>
   <tr>
     <td colspan="2"><i>Variable: Pedagógico-Didáctico -  Dimensión: Estudiante</i></td>
-  </tr>      
-                                  
+  </tr>
+
             <tr>
     <td rowspan="2"><b>15</b></td>
     <td><b>Transferencia de aprendizaje</b></td>
@@ -163,8 +163,8 @@
   </tr>
   <tr>
     <td colspan="2"><i>Variable: Pedagógico-Didáctico -  Dimensión: Estudiante</i></td>
-  </tr>      
-                                  
+  </tr>
+
             <tr>
     <td rowspan="2"><b>16</b></td>
     <td><b>Aprendizaje Autónomo</b></td>
@@ -173,8 +173,8 @@
   </tr>
   <tr>
     <td colspan="2"><i>Variable: Pedagógico-Didáctico -  Dimensión: Estudiante</i></td>
-  </tr>      
-                                  
+  </tr>
+
             <tr>
     <td rowspan="2"><b>17</b></td>
     <td><b>Necesidades Especiales de Aprendizaje </b></td>
@@ -183,8 +183,8 @@
   </tr>
   <tr>
     <td colspan="2"><i>Variable: Pedagógico-Didáctico -  Dimensión: Estudiante</i></td>
-  </tr>      
-                                  
+  </tr>
+
             <tr>
     <td rowspan="2"><b>18</b></td>
     <td><b>Evaluación Formativa</b></td>
@@ -193,8 +193,8 @@
   </tr>
   <tr>
     <td colspan="2"><i>Variable: Pedagógico-Didáctico -  Dimensión: Evaluación de los Aprendizajes</i></td>
-  </tr>      
-                                  
+  </tr>
+
             <tr>
     <td rowspan="2"><b>19</b></td>
     <td><b>Evaluación Sumativa</b></td>
@@ -203,8 +203,8 @@
   </tr>
   <tr>
     <td colspan="2"><i>Variable: Pedagógico-Didáctico -  Dimensión: Evaluación de los Aprendizajes</i></td>
-  </tr>      
-                                  
+  </tr>
+
             <tr>
     <td rowspan="2"><b>20</b></td>
     <td><b>Acción de Mejora</b></td>
@@ -213,8 +213,8 @@
   </tr>
   <tr>
     <td colspan="2"><i>Variable: Investigación -  Dimensión: Investigación y Acción Pedagógica</i></td>
-  </tr>      
-                                  
+  </tr>
+
             <tr>
     <td rowspan="2"><b>21</b></td>
     <td><b>Relación con comunidades científicas nacionales e internacionales</b></td>
@@ -223,8 +223,8 @@
   </tr>
   <tr>
     <td colspan="2"><i>Variable: Investigación -  Dimensión: Investigación y Acción Pedagógica</i></td>
-  </tr>      
-                                  
+  </tr>
+
             <tr>
     <td rowspan="2"><b>22</b></td>
     <td><b>Gestión del Conocimiento</b></td>
@@ -233,8 +233,8 @@
   </tr>
   <tr>
     <td colspan="2"><i>Variable: Investigación -  Dimensión: Investigación y Acción Pedagógica</i></td>
-  </tr>      
-                                  
+  </tr>
+
             <tr>
     <td rowspan="2"><b>23</b></td>
     <td><b>Actualización del curso</b></td>
@@ -243,8 +243,8 @@
   </tr>
   <tr>
     <td colspan="2"><i>Variable: Investigación -  Dimensión: Investigación y Acción Pedagógica</i></td>
-  </tr>      
-                                  
+  </tr>
+
             <tr>
     <td rowspan="2"><b>24</b></td>
     <td><b>Desarrollo Social y Humano Sostenible</b></td>
@@ -253,8 +253,8 @@
   </tr>
   <tr>
     <td colspan="2"><i>Variable: Desarrollo Regional y Proyección comunitaria -  Dimensión: Responsabilidad Social Universitaria</i></td>
-  </tr>      
-                                  
+  </tr>
+
             <tr>
     <td rowspan="2"><b>25</b></td>
     <td><b>Desarrollo Social y Humano Sostenible</b></td>
@@ -263,8 +263,8 @@
   </tr>
   <tr>
     <td colspan="2"><i>Variable: Desarrollo Regional y Proyección comunitaria -  Dimensión: Responsabilidad Social Universitaria</i></td>
-  </tr>      
-                                  
+  </tr>
+
             <tr>
     <td rowspan="2"><b>26</b></td>
     <td><b>Desarrollo Social y Humano Sostenible</b></td>
@@ -273,8 +273,8 @@
   </tr>
   <tr>
     <td colspan="2"><i>Variable: Desarrollo Regional y Proyección comunitaria -  Dimensión: Responsabilidad Social Universitaria</i></td>
-  </tr>      
-                                  
+  </tr>
+
             <tr>
     <td rowspan="2"><b>27</b></td>
     <td><b>Pertenencia</b></td>
@@ -283,8 +283,8 @@
   </tr>
   <tr>
     <td colspan="2"><i>Variable: Actitudes y Comportamientos -  Dimensión: Relaciones Inter-personales</i></td>
-  </tr>      
-                                  
+  </tr>
+
             <tr>
     <td rowspan="2"><b>28</b></td>
     <td><b>Trabajo en Equipo</b></td>
@@ -293,8 +293,8 @@
   </tr>
   <tr>
     <td colspan="2"><i>Variable: Actitudes y Comportamientos -  Dimensión: Relaciones Inter-personales</i></td>
-  </tr>      
-                                  
+  </tr>
+
             <tr>
     <td rowspan="2"><b>29</b></td>
     <td><b>Resolución de Conflictos</b></td>
@@ -303,8 +303,8 @@
   </tr>
   <tr>
     <td colspan="2"><i>Variable: Actitudes y Comportamientos -  Dimensión: Relaciones Inter-personales</i></td>
-  </tr>      
-                                  
+  </tr>
+
             <tr>
     <td rowspan="2"><b>30</b></td>
     <td><b>Compromiso</b></td>
@@ -322,11 +322,16 @@
   <tr>
     <td> </td>
     <td> </td>
-    <td> </td>
-    <td align="center"><button type="submit">Enviar</button></td>
+    <td>
+    </td>
+    {% if evaluacion.id.oferta.director.user.id == 100 %}
+      Para co evaluar el director debe estar defido.
+    {% else %}
+      <td align="center"><button type="submit">Enviar</button></td>
+    {% endif %}
   </tr>
     </tbody>
     </table>
  {{ form_widget(edit_form._token) }}
-  </form>    
+  </form>
   {% endblock %}
